cmake_minimum_required(VERSION 3.17)
project(cpprevise_leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(0001_two_sum src/0001_two_sum.cpp)
add_executable(0026_remove_duplicates_from_sorted_array src/0026_remove_duplicates_from_sorted_array.cpp)
add_executable(0035_search_and_insert src/0035_search_and_insert.cpp)
add_executable(0009_palindrome_number src/0009_palindrome_number.cpp)
add_executable(0007_reverse_integer src/0007_reverse_integer.cpp)
add_executable(0020_valid_parantheses src/0020_valid_parantheses.cpp)
add_executable(0053_maximum_subarray src/0053_maximum_subarray.cpp)
add_executable(0058_length_of_last_word src/0058_length_of_last_word.cpp)
add_executable(0003_longest_substring_without_repeating_characters src/0003_longest_substring_without_repeating_characters.cpp)
add_executable(1748_sum_of_unique_elements src/1748_sum_of_unique_elements.cpp)
add_executable(1742_maximum_number_of_balls_in_a_box src/1742_maximum_number_of_balls_in_a_box.cpp)
add_executable(0027_remove_element src/0027_remove_element.cpp)
add_executable(412_fizz_buzz src/0412_fizz_buzz.cpp)
add_executable(0387_first_unique_character_in_string src/0387_first_unique_character_in_string.cpp)
add_executable(0243_shortest_word_distance src/0243_shortest_word_distance.cpp)